docs: fix dark mode bg + code/link colors

--- a/docs/src/styles/index.css
+++ b/docs/src/styles/index.css
@@ -191,7 +191,7 @@ small,
 }
 
 a {
-  color: var(--theme-text-accent);
+  color: var(--theme-link-text);
   font-weight: 400;
   text-underline-offset: 0.08em;
   align-items: center;
@@ -244,22 +244,9 @@ nav :is(ul, ol) {
 
 a > code {
   position: relative;
-  color: var(--theme-text-accent);
-  background: transparent;
+  color: var(--theme-link-text);
+  text-decoration: underline;
   text-underline-offset: var(--padding-block);
-}
-
-a > code::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  background: var(--theme-accent);
-  opacity: var(--theme-accent-opacity);
-  border-radius: var(--border-radius);
 }
 
 a:hover,
@@ -280,16 +267,17 @@ strong {
 /* Supporting Content */
 
 code {
-  --border-radius: 3px;
-  --padding-block: 0.2rem;
-  --padding-inline: 0.33rem;
+  --border-radius: 0;
+  --padding-block: .125rem;
+  --padding-inline: .25rem;
 
   font-family: var(--font-mono);
-  font-size: 0.85em;
-  color: inherit;
+  font-size: .85em;
+  color: var(--theme-code-inline-text);
+  line-height: 1.5;
   background-color: var(--theme-code-inline-bg);
   padding: var(--padding-block) var(--padding-inline);
-  margin: calc(var(--padding-block) * -1) - 0.125em;
+  margin: calc(var(--padding-block) * -1) - .125em;
   border-radius: var(--border-radius);
   word-break: break-word;
 }
